# rag-search-your-base

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/catalog/: catalog.json
data/chunks/: recursive_chunks.json
data/essays/: do.json  field.json  goodwriting.json  greatwork.json  kids.json  selfindulgence.json  woke.json  writes.json
docs/: architecture.md  ask_eval_set.json  eval_set.json
docs/examples/: 20260319_211342.json  20260319_211433.json  20260319_211544.json
results/: eval_results.json
src/: main.py
src/core/: chunking.py  embed.py  evaluate.py  generate.py  ingest.py
src/rag_search_your_base/: __init__.py
src/utils/: clients.py  config.py  logger.py  prompts.py  retriever.py  validators.py
tests/: test_retriever.py
